@@ -19,6 +19,7 @@ CHANGELOG Roundcube Webmail
 - Fix lack of translation of special folders in some configurations (#1489799)
 - Fix XSS issue in plain text spellchecker (#1489806)
 - Fix invalid page title for some folders (1489804)
+- Fix redundant alert message on over-size uploads (#1489817)
 
 RELEASE 1.0.0
 -------------
